--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.9.3",
     "config": "^1.8.1",
+    "continuation-local-storage": "^3.1.4",
     "cookie-parser": "^1.3.3",
     "csv": "^0.4.6",
     "express": "^4.10.2",
@@ -33,6 +34,7 @@
     "mysql": "^2.5.3",
     "node-range": "^0.1.0",
     "q": "^1.1.2",
+    "request-promise": "^1.0.1",
     "sprintf-js": "^1.0.3",
     "winston": "^0.8.3"
   },
