--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ client2/.public.git-rev
 client2/.volunteers.git-rev
 
 provision/grains
+
+firebase-debug.log
+ui-debug.log
+
+firebase/functions/config/default.json
