--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
   "license": "BSD",
   "dependencies": {
     "body-parser": "^1.9.3",
+    "firebase-functions": "^3.11.0",
+    "firebase-admin": "^9.2.0",
     "clone": "^2.1.1",
     "config": "^1.8.1",
     "cookie-parser": "^1.3.3",
